# oh-my-pi

./: AGENTS.md  Cargo.toml  README.md  biome.json  package.json
.github/workflows/: ci.yml  publish-patched.yml  sync-upstream.yml
crates/brush-core-vendored/: Cargo.toml
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  block.rs  clipboard.rs  crash_handler.rs  fs_cache.rs  glob.rs  grep.rs  keys.rs  lib.rs  pty.rs  shell.rs  snapcompact.rs  text.rs
crates/pi-natives/src/fonts/: 5x8.bdf  unscii-8.hex
docs/: adding-a-provider.md  auth-broker-gateway.md  bash-tool-runtime.md  compaction.md  config-usage.md  environment-variables.md  extensions.md  keybindings.md  lsp-config.md  macos-signing-notarization.md  mnemosyne-memory-backend.md  models.md  non-compaction-retry-policy.md  python-repl.md  rulebook-matching-pipeline.md  sdk.md  session-switching-and-recent-listing.md  session.md  skills.md  system-prompt-customization.md  task-agent-discovery.md  ttsr-injection-lifecycle.md  tui-core-renderer.md  tui-runtime-internals.md  tui.md
scripts/: chunk-edit-benchmark.py  ci-macos-sign.sh  ci-macos-upload-secrets.sh  ci-release-build-binaries.ts  ci-release-notes.ts  ci-release-publish.ts  ci-update-brew-formula.ts  dump-edit-history.ts  edit_benchmark_common.py  fix-test-imports.ts  macos-entitlements.plist  release.ts  rewrite-system-prompt.style.md  rewrite-system-prompt.test.ts  rewrite-system-prompt.ts  setup-npm-trust.ts  tool-prompt-usage.ts  vim-edit-benchmark.py
tests/: test_config.py  test_queue_shutdown.py  test_server.py  test_worker.py
(+98 files in other folders)
